test/files/type-resolver/errors/expression.otest
name = "Chained boolean expressions"
line = 2
character = 8
error = "Expected number on left-hand side, but received boolean."

---

test = 1 == 2 == 3

---

name = "Chained parenthesized boolean expressions"
line = 2
character = 8
error = "Expected number on left-hand side, but received boolean."

---

test = (1 == 2) == 3

---

name = "Add boolean expression to number"
line = 2
character = 12
error = "Expected number on right-hand side, but received boolean."

---

test = 1 + (2 == 3)

---

name = "Negate language constant"
line = 2
character = 9
error = "Expected number, but received round direction constant."

---

test = -nearest

---

name = "Negate list variable"
line = 3
character = 10
error = "Expected number, but received list of number."

---

test = [ 1, 2, 3 ]
test2 = -test
